plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

ext {
    springBootVersion = "3.4.5"
    springCloudVersion = "2024.0.1"
    springModulithVersion = "1.3.5"
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
    }
    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
    }

    // ✅ 핵심: BOM import를 서브프로젝트에 적용
    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
        }
        dependencies {
            dependency 'org.apache.commons:commons-lang3:3.20.0'
            dependency 'org.bouncycastle:bcprov-jdk18on:1.84'
            dependency 'org.bouncycastle:bcpkix-jdk18on:1.84'
            dependency 'org.eclipse.jetty:jetty-http:12.0.33'
        }
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}